--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Install frontend dependencies
         working-directory: frontend
+        env: 
+          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
         run: npm install
 
       - name: Build and export
