--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "tsx src/index.ts",
     "build": "tsc",
+    "start": "node dist/index.js",
     "deploy": "npm run build && npm run start"
   },
   "keywords": [],
