Create version.txt for rsync with current commits

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Create version.txt with current commit SHA
+        run: echo "${{ github.sha }}" > ./backend/version.txt
+
       - name: Make SSH directory
         run: mkdir -p $HOME/.ssh
 
