--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && echo $(git rev-parse --short HEAD) > src/version.txt",
+    "build": "tsc",
     "start": "node dist/index.js",
     "deploy": "npm run build && npm run start"
   },
